flux/monitoring/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.home`)
      kind: Rule
      services:
        - name: whoami
          port: 80
    - match: Host(`whoami.arlodev.co.uk`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.home`)
      kind: Rule
      services:
        - name: whoami
          port: 80
    - match: Host(`whoami.arlodev.co.uk`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: cert-whoami
